--- a/US_Unemployment/static/css/style.css
+++ b/US_Unemployment/static/css/style.css
@@ -43,6 +43,11 @@ body {
     float: right;
 }
 
+h6 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
 #tableauPlaceholder::-webkit-scrollbar {
     width: 0 !important;
     scrollbar-width: none;
