--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -56,11 +56,11 @@
         <div class="row" style="margin: 20px;">
             <div class="col-md-12 row" style="height: fit-content; width:fit-content">
                 <div class="states">
-                    <h5>State:</h5>
+                    <h6>State:</h6>
                     <select id="selState"></select>
                 </div>
                 <div class="years">
-                    <h5>Year:</h5>
+                    <h6>Year:</h6>
                     <select id="selYear"></select>
                 </div>
             </div>
@@ -70,35 +70,17 @@
                 <div id="map" style="width: 100%; height: 800px; "></div>
             </div>
             <div class="col-md-5">
-                <div id="bar" style="width: 70%; height: 70%;"></div>
-            </div>
-        </div>
-    </div>
-
-    <!-- <div class="col-md-2">
-                    <div class="well">
-                        <h5>State:</h5>
-                        <select id="selDataset" onchange="optionChanged(this.value)"></select>
-                    </div>
-                </div> -->
-
-
-    <!-- </div> -->
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4" style="text-align: justify;">
-                <p>
-                    <h6>U.S. Bureau of Labor Statistics - Latest News </h6>
-                </p>
+                <div id="bar" style="width: 70%; height: auto;"></div>
+                <h6 style="text-align:center">Latest Unemployment News </h6>
                 <!-- RSS feed -->
-                <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss&num=5&date=y&utf=y" charset="UTF-8" type="text/javascript"></script>
+                <hr>
+                <script language="JavaScript " src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss&num=5&date=y&utf=y " charset="UTF-8 " type="text/javascript "></script>
             </div>
         </div>
     </div>
 </body>
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer ">
     <div>
         <h6> © Team Data Vizards</h6>
         <ul>
@@ -111,28 +93,28 @@
 </footer>
 
 <!-- Leaflet plotly -->
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js "></script>
 <!-- Leaflet JavaScript -->
-<script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
+<script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js "></script>
 
-<!-- <script src="{{ url_for('static', filename='js/us-states.js') }}"></script> -->
+<!-- <script src="{{ url_for( 'static', filename='js/us-states.js' ) }} "></script> -->
 
 <!-- 
-    <script type="text/javascript" src="static/js/config.js"></script>
-  <script type="text/javascript" src="static/js/logic.js"></script> -->
+    <script type="text/javascript " src="static/js/config.js "></script>
+  <script type="text/javascript " src="static/js/logic.js "></script> -->
 <!-- Bootstrap JS -->
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js "></script>
 <!-- Our JavaScript -->
-<script src="{{ url_for('static', filename='js/choropleth.js') }}"></script>
-<script src="{{ url_for('static', filename='js/config.js') }}"></script>
-<script src="{{ url_for('static', filename='js/us-states.js') }}"></script>
-<script src="{{ url_for('static', filename='js/app.js') }}"></script>
+<script src="{{ url_for( 'static', filename='js/choropleth.js' ) }} "></script>
+<script src="{{ url_for( 'static', filename='js/config.js' ) }} "></script>
+<script src="{{ url_for( 'static', filename='js/us-states.js' ) }} "></script>
+<script src="{{ url_for( 'static', filename='js/app.js' ) }} "></script>
 
 
 </html>
